--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -43,7 +43,8 @@
 /* ==========================================================================
 5. LAYOUTS
 ========================================================================== */
-// @import "layouts/layout";
+@import "layouts/content";
+@import "layouts/header";
 
 /* ==========================================================================
 6. HELPERS
