--- a/src/assets/stylesheets/settings/_variables.scss
+++ b/src/assets/stylesheets/settings/_variables.scss
@@ -10,10 +10,10 @@ $black:                     #000000;
 // Brand colors
 // -------------------------------------
 
-$brand-primary:             #202545;
+$brand-primary:             #9BAABA;
 $brand-secondary:           #377AF4;
 
-$background-color:          $white;
+$background-color:          #FAFAFA;
 $link-color:                $brand-secondary;
 $link-hover-color:          $brand-secondary;
 
@@ -24,8 +24,11 @@ $link-hover-color:          $brand-secondary;
 
 $brand-font:                Roboto, sans-serif;
 $headings-font:             $brand-font;
+$headings-color:            #4D555D;
+$headings-font-weight:      700;
 $font-family-base:          Source Sans Pro, sans-serif;
 $icons-font:                Material Icons;
+$brand-icons:               Brand Icons;
 
 
 // -------------------------------------
