--- a/src/assets/stylesheets/base/_base.scss
+++ b/src/assets/stylesheets/base/_base.scss
@@ -24,7 +24,8 @@ a:focus {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: $headings-font;
-    color: $brand-primary;
+    font-weight: $headings-font-weight;
+    color: $headings-color;
     margin: 0;
 }
 
@@ -59,7 +60,6 @@ h6 {
 }
 
 p {
-  line-height: 1.25rem;
   margin: 0 0 .75rem;
 }
 
